@@ -545,6 +545,8 @@ class TestMethod < Test::Unit::TestCase
   def test___dir__
     assert_instance_of String, __dir__
     assert_equal(File.dirname(File.realpath(__FILE__)), __dir__)
+    bug8436 = '[ruby-core:55123] [Bug #8436]'
+    assert_equal(__dir__, eval("__dir__", binding), bug8436)
   end
 
   def test_alias_owner
