@@ -1,3 +1,9 @@
+Sat Jun 15 08:37:28 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* vm_eval.c (eval_string_with_cref): propagate absolute path from the
+	  binding if it is given explicitly.  patch by Gat (Dawid Janczak) at
+	  [ruby-core:55123]. [Bug #8436]
+
 Sat Jun 15 02:40:18 2013  Tanaka Akira  <akr@fsij.org>
 
 	* bignum.c (bdigs_small_lshift): Extracted from big_lshift.
